--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,35 +1,33 @@
 @charset "UTF-8"
 
 
-* {
-margin: 0px;
-padding: 0px;
-font-family: Arial, Helvetica, sans-serif;
-}
-
-
 html, body {
     height: 100vh;
     width: 100vw;
     background-color: black;
+
 }
 
-
-    body{
-        background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
-        background-size: cover;
-        background-attachment: fixed;
-    }
+::-webkit-scrollbar {
+    height: 0px;
+    width: 0px;
+}
+body{
+    background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
+}
 
 
 main {
     position: relative;
     height: 100vh;
+    width: 98vw;
+        
+    }
     
-}
-
-
-section#telefone {
+    
+    section#telefone {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -38,15 +36,39 @@ section#telefone {
         height:627px;
         width:311px;
         background:url('../imagens/frame-iphone.png') no-repeat;
-
+    
     }
-
-
+    
+    
     iframe#tela{
         position: relative;
         top:80px;
         left:22px;
         height:471px;
         width:267px;
-
+    
     }
+    
+    
+    section#redes_sociais {
+        text-align: right;
+      
+    }
+    
+        section#redes_sociais img {
+          width: 50px;
+          margin: 10px;
+          border-radius: 50%;
+          box-shadow: 2px 2px 5px rgba(255, 255, 255, 0.69);
+          box-sizing: border-box;
+        }
+
+            section#redes_sociais img:hover {
+                border: 2px solid white;
+                transform: translate (-10px, - 10px);
+                box-shadow: 5px 5px 10px white;
+
+
+ 
+
+            }
